feat: login structure and error handling ready
