# docs/swagger.json
@@ -49,7 +49,43 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/v1/user/signin": {
+            "post": {
+                "description": "An endpoint for a user to sign-in",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Sign-In User",
+                "parameters": [
+                    {
+                        "description": "User SignIn",
+                        "name": "users",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/signup": {
             "post": {
                 "description": "An endpoint for a new user to sign-up",
                 "consumes": [
@@ -165,6 +201,21 @@
                     "minLength": 1
                 },
                 "occupation": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "requests.LoginReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 },
                 "password": {
